# NoVM

./: Cargo.toml  LICENSE  README.md
novm-core/: Cargo.toml
novm-core/src/: lib.rs
novm-vmware/: Cargo.toml
novm-vmware/src/: lib.rs
novm-vmware/src/unix/: mod.rs
novm-vmware/src/windows/: mod.rs
src/: main.rs
